--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "debug": "^4.1.1",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "phaser": "3.10.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
