--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Capture point style arcade game built in Phaser 3",
   "scripts": {
     "dev": "webpack --mode development && webpack-dev-server --mode development",
-    "build": "webpack --mode production && webpack-dev-server --mode production"
+    "build": "webpack --mode production && webpack-dev-server --mode production",
+    "socket": "nodemon server/websocket-server.js "
   },
   "repository": {
     "type": "git",
