--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "Capture point style arcade game built in Phaser 3",
   "scripts": {
-    "dev": "webpack --mode development && webpack-dev-server --mode development",
-    "build": "webpack --mode production && webpack-dev-server --mode production",
-    "socket": "nodemon server/websocket-server.js "
+    "dev": "webpack --mode development && webpack-dev-server --open --config webpack.dev.js",
+    "socket-dev": "nodemon server/websocket-server.js ",
+    "build": "webpack --mode production && webpack-dev-server --open --config webpack.prod.js",
+    "socket": "node server/websocket-server.js "
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "typescript": "3.3.3",
     "webpack": "4.29.4",
     "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.1.14"
+    "webpack-dev-server": "3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "debug": "^4.1.1",
