--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "socket-dev": "nodemon server/websocket-server.js ",
     "build": "webpack --mode production && webpack-dev-server --open --config webpack.prod.js",
     "socket": "node server/websocket-server.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
