--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "webpack --mode development && webpack-dev-server --open --config webpack.dev.js",
     "socket-dev": "nodemon server/websocket-server.js ",
-    "build": "webpack --mode production && webpack-dev-server --open --config webpack.prod.js",
+    "build": "webpack --mode production --config webpack.prod.js",
     "socket": "node server/websocket-server.js",
     "start": "node index.js",
     "heroku-postbuild": "npm run build"
