--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "8.9.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "socket-dev": "nodemon server/websocket-server.js ",
     "build": "webpack --mode production --config webpack.prod.js",
     "socket": "node server/websocket-server.js",
